# render

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO  render.code-workspace
cmake/: developer_mode.cmake  options.cmake  prelude.cmake  tools.cmake
cmake/install/: config.cmake  rules.cmake
cmake/presets/: ci.json  common.json  flags.json
code/include/golxzn/: common.hpp  opengl_render.hpp  render.hpp
code/include/golxzn/graphics/: extendable_render.hpp  extensions.hpp
code/include/golxzn/graphics/controller/: capabilities_holder.hpp  controller.hpp  object.hpp
code/include/golxzn/graphics/controller/implementations/: gl_impl.hpp
code/include/golxzn/graphics/controller/opengl/: BaseBufferObject.hpp  EBO.hpp  VAO.hpp  VBO.hpp
code/include/golxzn/graphics/engines/: opengl.hpp
code/include/golxzn/graphics/engines/opengl/: BaseBufferObject.hpp  EBO.hpp  VAO.hpp  VBO.hpp
code/include/golxzn/graphics/extensions/: gizmos.hpp  primitives.hpp
code/include/golxzn/graphics/inner/: texture_instances_registry.hpp
code/include/golxzn/graphics/mods/: blend.hpp  blend_holder.hpp  capabilities.hpp  depth.hpp  holder.hpp
code/include/golxzn/graphics/types/: material.hpp  mesh.hpp  name_manager.hpp  object.hpp  shader.hpp  shader_program.hpp  texture.hpp
code/include/golxzn/graphics/types/model/: material.hpp  mesh.hpp  model.hpp  presets.hpp
code/include/golxzn/graphics/types/shader/: program.hpp
code/include/golxzn/graphics/types/texture/: texture.hpp
code/include/golxzn/graphics/window/: window.hpp
code/include/golxzn/graphics/window/implementations/: glfw_impl.hpp
code/include/golxzn/render/: extendable_render.hpp  extensions.hpp
code/include/golxzn/render/engines/: opengl.hpp
code/include/golxzn/render/engines/opengl/: BaseBufferObject.hpp  EBO.hpp  VAO.hpp  VBO.hpp
code/include/golxzn/render/extensions/: primitives.hpp
code/src/golxzn/graphics/controller/: capabilities_holder.cpp  controller.cpp  object.cpp
code/src/golxzn/graphics/controller/implementations/: gl_impl.cpp
code/src/golxzn/graphics/controller/opengl/: BaseBufferObject.cpp  EBO.cpp  VAO.cpp  VBO.cpp
code/src/golxzn/graphics/engines/: opengl.cpp
code/src/golxzn/graphics/engines/opengl/: BaseBufferObject.cpp  EBO.cpp  VAO.cpp  VBO.cpp
code/src/golxzn/graphics/extensions/: gizmos.cpp  primitives.cpp
code/src/golxzn/graphics/inner/: texture_instances_registry.cpp
code/src/golxzn/graphics/mods/: blend.cpp  blend_holder.cpp  capabilities.cpp  depth.cpp  holder.cpp
code/src/golxzn/graphics/types/: material.cpp  mesh.cpp  name_manager.cpp  shader.cpp  shader_program.cpp  texture.cpp
code/src/golxzn/graphics/types/model/: material.cpp  mesh.cpp  model.cpp  presets.cpp
code/src/golxzn/graphics/types/shader/: program.cpp  shader.cpp
code/src/golxzn/graphics/types/texture/: texture.cpp
code/src/golxzn/graphics/window/: window.cpp
code/src/golxzn/graphics/window/implementation/: glfw_impl.cpp
code/src/golxzn/render/engines/: opengl.cpp
code/src/golxzn/render/engines/opengl/: BaseBufferObject.cpp  EBO.cpp  VAO.cpp  VBO.cpp
dependencies/: import.cmake
dependencies/stb_image/: CMakeLists.txt
examples/: CMakeLists.txt
examples/assets/shaders/: cube_map.frag  cube_map.fs.glsl  cube_map.vert  cube_map.vs.glsl  default.fs.glsl  default.vert  mesh.frag  mesh.vert  texture.frag  texture.fs.glsl  texture.vert  texture.vs.glsl
examples/assets/shaders/grid/: infinity_grid.frag  infinity_grid.vert
examples/common/: glfw_window.hpp
examples/opengl/mesh/: main.cpp  teapot.hpp
examples/opengl/primitives/: main.cpp
examples/opengl/rectangle/: main.cpp
examples/opengl/texture/: main.cpp
examples/opengl_rectangle/: main.cpp
examples/opengl_triangle/: main.cpp
tests/: CMakeLists.txt
